Name:                keter
Version:             1.4.3.2
Synopsis:            Web application deployment manager, focusing on Haskell web frameworks
Description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/keter>.
Homepage:            http://www.yesodweb.com/
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web, Yesod
Build-type:          Simple
Cabal-version:       >=1.8
extra-source-files:  ChangeLog.md
                     README.md

--Data-Files:        incoming/foo/bundle.sh, incoming/foo/config/keter.yaml

flag system-filepath
  description: Use system-filepath
  default: False

Library
  Build-depends:       base
                     , directory
                     , bytestring
                     , text
                     , containers
                     , transformers
                     , process
                     , random
                     , data-default
                     , filepath
                     , zlib
                     , network
                     , time
                     , tar
                     , template-haskell
                     , blaze-builder
                     , yaml
                     , unix-compat
                     , conduit
                     , conduit-extra
                     , http-reverse-proxy
                     , unix
                     , wai-app-static
                     , wai
                     , wai-extra
                     , http-types
                     , regex-tdfa
                     , attoparsec
                     , http-client
                     , http-conduit
                     , case-insensitive
                     , array
                     , mtl
                     , warp
                     , warp-tls
                     , aeson
                     , unordered-containers
                     , vector
                     , stm
                     , async
                     , lifted-base
                     , tls

  if impl(ghc < 7.6)
    build-depends:     ghc-prim
  if flag(system-filepath)
    build-depends:     fsnotify >= 0.1 && < 0.2
                     , system-filepath
    cpp-options:       -DSYSTEM_FILEPATH
  else
    build-depends:     fsnotify >= 0.2.0.2

  Exposed-Modules:     Keter.Plugin.Postgres
                       Keter.Types
                       Keter.Types.V04
                       Keter.Types.V10
                       Keter.Types.Common
                       Keter.Types.Middleware
                       Keter.App
                       Keter.AppManager
                       Keter.LabelMap
                       Keter.Main
                       Keter.PortPool
                       Keter.Proxy
                       Keter.HostManager
                       Network.HTTP.ReverseProxy.Rewrite
                       Data.Yaml.FilePath
                       Codec.Archive.TempTarball
                       Data.Conduit.LogFile
                       Data.Conduit.Process.Unix
  ghc-options:         -Wall
  c-sources:           cbits/process-tracker.c

Executable keter
  Main-is:             keter.hs
  hs-source-dirs:      main
  Build-depends:       base, keter, data-default, filepath
  ghc-options:         -threaded -Wall
  other-modules:       Paths_keter

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    build-depends:   base
                   , transformers
                   , conduit
                   , bytestring
                   , hspec >= 1.3
                   , unix
                   , keter
                   , HUnit
    ghc-options:     -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/snoyberg/keter
